add helper class, tidy sass

--- a/public/index.html
+++ b/public/index.html
@@ -46,30 +46,50 @@
   <hr>
   <h3 class="h3">Backgrounds</h3>
   <br>
-  <div class="background--blue"><strong class="font-white">(.background--blue)</strong></div>
+  <div class="background--great-blue"><strong class="font-white">(.background--great-blue)</strong></div>
   <br>
-  <div class="background--stone"><strong class="font-white">(.background--stone)</strong></div>
+  <div class="background--flag-red"><strong class="font-white">(.background--flag-red)</strong></div>
   <br>
-  <div class="background--light-stone"><strong>(.background--light-stone)</strong></div>
+  <div class="background--stone"><strong>(.background--stone)</strong></div>
   <br>
-  <div class="background--great-primary"><strong class="font-white">(.background--great-primary)</strong></div>
+  <div class="background--white"><strong class="font-base">(.background--white)</strong></div>
   <br>
-  <div class="background--grey-darkest"><strong class="font-white">(.background--grey-darkest)</strong></div>
+  <div class="background--grey"><strong class="font-white">(.background--grey)</strong></div>
+  <br>
+  <div class="background--mid-grey"><strong class="font-white">(.background--mid-grey)</strong></div>
+  <br>
+  <div class="background--light-grey"><strong class="font-white">(.background--light-grey)</strong></div>
+  <br>
+  <div class="background--purple"><strong class="font-white">(.background--purple)</strong></div>
+  <br>
+  <div class="background--mid-blue"><strong class="font-white">(.background--mid-blue)</strong></div>
+  <br>
+  <div class="background--grey"><strong class="font-white">(.background--grey)</strong></div>
   <hr>
   <h3 class="h3">Grids & Breakpoints</h3>
-  <div class="push--bottom cf">
-    <div class="col-1 background--blue">asdd</div>
-    <div class="col-1 background--blue">asdd</div>
-    <div class="col-1 background--blue">asdd</div>
-    <div class="col-1 background--blue">asdd</div>
-    <div class="col-1 background--blue">asdd</div>
-    <div class="col-1 background--blue">asdd</div>
-    <div class="col-1 background--blue">asdd</div>
-    <div class="col-1 background--blue">asdd</div>
-    <div class="col-1 background--blue">asdd</div>
-    <div class="col-1 background--blue">asdd</div>
-    <div class="col-1 background--blue">asdd</div>
-    <div class="col-1 background--blue">asdd</div>
+  <div class="push--bottom cf text--center">
+    <div class="col-1 background--mid-grey">1</div>
+    <div class="col-1 background--mid-grey">1</div>
+    <div class="col-1 background--mid-grey">1</div>
+    <div class="col-1 background--mid-grey">1</div>
+    <div class="col-1 background--mid-grey">1</div>
+    <div class="col-1 background--mid-grey">1</div>
+    <div class="col-1 background--mid-grey">1</div>
+    <div class="col-1 background--mid-grey">1</div>
+    <div class="col-1 background--mid-grey">1</div>
+    <div class="col-1 background--mid-grey">1</div>
+    <div class="col-1 background--mid-grey">1</div>
+    <div class="col-1 background--mid-grey">1</div>
+  </div>
+
+  <div class="push--bottom cf text--center">
+    <div class="col-6 background--mid-grey">6</div>
+    <div class="col-6 background--mid-grey">6</div>
+  </div>
+
+  <div class="push--bottom cf text--center">
+    <div class="col-3 background--mid-grey">3</div>
+    <div class="col-9 background--mid-grey">9</div>
   </div>
 
 
