--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
 
 
   <hr>
-  <h4>Checkboxes</h4>
+  <h4>Radio Button</h4>
   <form>
     <div class="form-group">
       <fieldset class="inline">
@@ -114,7 +114,7 @@
     </div>
   </form>
   <hr>
-  <h4>Radio button</h4>
+  <h4>Checkboxes</h4>
   <form>
     <fieldset>
 
