--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,11 @@
   <hr>
   <h3 class="h3">List</h3>
   <ul class="list list-bullet push--bottom">
-    <li>which are the major online markets in overseas countries</li>
-    <li>if there is a suitable e-commerce website to sell your products</li>
-    <li>about costs and logistics</li>
-    <li>how to proceed and join a marketplace</li>
-    <li>special terms negotiated by DIT (Department for International Trade)</li>
+    <li class="list-bullet--item">which are the major online markets in overseas countries</li>
+    <li class="list-bullet--item">if there is a suitable e-commerce website to sell your products</li>
+    <li class="list-bullet--item">about costs and logistics</li>
+    <li class="list-bullet--item">how to proceed and join a marketplace</li>
+    <li class="list-bullet--item">special terms negotiated by DIT (Department for International Trade)</li>
   </ul>
   <hr>
   <h3 class="h3">Buttons</h3>
