--- a/public/index.html
+++ b/public/index.html
@@ -12,149 +12,187 @@
 
   <link rel="stylesheet" href="css/main.css">
 </head>
-<body class="outer-container">
-  <h1 class="h1">h1</h1>
-  <p>This is a 48px headline<strong>(.h1)</strong></p>
-  <hr>
-  <h2 class="h2">h2</h2>
-  <p>This is a 32px headline <strong>(.h2)</strong></p>
-  <hr>
-  <h3 class="h3">h3</h3>
-  <p>This is a 24px headline <strong>(.h3)</strong></p>
-  <hr>
-  <h4 class="h4">h4</h4>
-  <p>This is a 18px headline <strong>(.h4)</strong></p>
-  <hr>
-  <p>This is a 16px paragraph. Cupcake ipsum dolor sit caramel, licorice gummy bears with waffle chocolate cake</p>
-  <hr>
-  <a href="www.thisisalink.com" class="link">This is a link</a> <strong>(.link)</strong>
-  <hr>
-  <h3 class="h3">List</h3>
-  <ul class="list list-bullet push--bottom">
-    <li class="list-bullet--item">which are the major online markets in overseas countries</li>
-    <li class="list-bullet--item">if there is a suitable e-commerce website to sell your products</li>
-    <li class="list-bullet--item">about costs and logistics</li>
-    <li class="list-bullet--item">how to proceed and join a marketplace</li>
-    <li class="list-bullet--item">special terms negotiated by DIT (Department for International Trade)</li>
-  </ul>
-  <hr>
-  <h3 class="h3">Buttons</h3>
-  <button class="button button-blue">Button</button>
-  <button class="button button-border">Button</button>
-  <h4 class="h4">Button large</h4>
-  <button class="button button-blue button-large">Button</button>
-  <hr>
-  <h3 class="h3">Backgrounds</h3>
-  <br>
-  <div class="background--great-blue"><strong class="font-white">(.background--great-blue)</strong></div>
-  <br>
-  <div class="background--flag-red"><strong class="font-white">(.background--flag-red)</strong></div>
-  <br>
-  <div class="background--stone"><strong>(.background--stone)</strong></div>
-  <br>
-  <div class="background--white"><strong class="font-base">(.background--white)</strong></div>
-  <br>
-  <div class="background--grey"><strong class="font-white">(.background--grey)</strong></div>
-  <br>
-  <div class="background--mid-grey"><strong class="font-white">(.background--mid-grey)</strong></div>
-  <br>
-  <div class="background--light-grey"><strong class="font-white">(.background--light-grey)</strong></div>
-  <br>
-  <div class="background--purple"><strong class="font-white">(.background--purple)</strong></div>
-  <br>
-  <div class="background--mid-blue"><strong class="font-white">(.background--mid-blue)</strong></div>
-  <br>
-  <div class="background--grey"><strong class="font-white">(.background--grey)</strong></div>
-  <hr>
-  <h3 class="h3">Grids & Breakpoints</h3>
-  <div class="push--bottom cf text--center">
-    <div class="col-1 background--mid-grey">1</div>
-    <div class="col-1 background--mid-grey">1</div>
-    <div class="col-1 background--mid-grey">1</div>
-    <div class="col-1 background--mid-grey">1</div>
-    <div class="col-1 background--mid-grey">1</div>
-    <div class="col-1 background--mid-grey">1</div>
-    <div class="col-1 background--mid-grey">1</div>
-    <div class="col-1 background--mid-grey">1</div>
-    <div class="col-1 background--mid-grey">1</div>
-    <div class="col-1 background--mid-grey">1</div>
-    <div class="col-1 background--mid-grey">1</div>
-    <div class="col-1 background--mid-grey">1</div>
-  </div>
+<body>
+  <header role="banner">
+    <div class="navigation">
+      <div class="navigation-top background--dark-navy">
+        <div class="outer-container">
+          <ul class="list-inline">
+            <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government.svg"></a></li>
+            <li class="float--left soft--left"><a class="" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of GREAT.gov.uk</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="background--great-blue">
+        <div class="outer-container">
+          <a href="https://www.exportingisgreat.gov.uk" title="Go to the Exporting is great homepage">
+            <img src="/images/EiG-logo-withHMG.svg" alt="Exporting is great logo" class="soft-half--ends">
+          </a>
+        </div>
+      </div>
+      <div class="navigation-main background--blue">
+        <div class="outer-container">
+          <nav>
+            <ul class="list-inline">
+              <li class="header-nav-link"><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="background--light-blue">New to exporting</a></li>
+              <li class="header-nav-link"><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="background--light-blue">Occasional Exporter</a></li>
+              <li class="header-nav-link"><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="background--light-blue">Regular exporter</a></li>
+              <li class="header-nav-link"><a class="font-reg" href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
+              <li class="header-nav-link"><a class="font-reg" href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
+              <li class="header-nav-link"><a class="font-reg" href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
+              <li class="header-nav-link"><a class="font-reg" href="" title="UK Export Finance">UK Export Finance</a></li>
+              <li class="header-nav-link"><a class="font-reg" href="https://events.trade.gov.uk/" title="Export Events">Export Events</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </header>
 
-  <div class="push--bottom cf text--center">
-    <div class="col-6 background--mid-grey">6</div>
-    <div class="col-6 background--mid-grey">6</div>
-  </div>
+  <main class="outer-container">
+    <h1 class="h1">h1</h1>
+    <p>This is a 48px headline<strong>(.h1)</strong></p>
+    <hr>
+    <h2 class="h2">h2</h2>
+    <p>This is a 32px headline <strong>(.h2)</strong></p>
+    <hr>
+    <h3 class="h3">h3</h3>
+    <p>This is a 24px headline <strong>(.h3)</strong></p>
+    <hr>
+    <h4 class="h4">h4</h4>
+    <p>This is a 18px headline <strong>(.h4)</strong></p>
+    <hr>
+    <p>This is a 16px paragraph. Cupcake ipsum dolor sit caramel, licorice gummy bears with waffle chocolate cake</p>
+    <hr>
+    <a href="www.thisisalink.com" class="link">This is a link</a> <strong>(.link)</strong>
+    <hr>
+    <h3 class="h3">List</h3>
+    <ul class="list push--bottom">
+      <li class="list-item">which are the major online markets in overseas countries</li>
+      <li class="list-item">if there is a suitable e-commerce website to sell your products</li>
+      <li class="list-item">about costs and logistics</li>
+      <li class="list-item">how to proceed and join a marketplace</li>
+      <li class="list-item">special terms negotiated by DIT (Department for International Trade)</li>
+    </ul>
+    <hr>
+    <h3 class="h3">Buttons</h3>
+    <button class="button button-blue">Button</button>
+    <button class="button button-border">Button</button>
+    <h4 class="h4">Button large</h4>
+    <button class="button button-blue button-large">Button</button>
+    <hr>
+    <h3 class="h3">Backgrounds</h3>
+    <br>
+    <div class="background--great-blue"><strong class="font-white">(.background--great-blue)</strong></div>
+    <br>
+    <div class="background--flag-red"><strong class="font-white">(.background--flag-red)</strong></div>
+    <br>
+    <div class="background--stone"><strong>(.background--stone)</strong></div>
+    <br>
+    <div class="background--white"><strong class="font-base">(.background--white)</strong></div>
+    <br>
+    <div class="background--grey"><strong class="font-white">(.background--grey)</strong></div>
+    <br>
+    <div class="background--mid-grey"><strong class="font-white">(.background--mid-grey)</strong></div>
+    <br>
+    <div class="background--light-grey"><strong class="font-white">(.background--light-grey)</strong></div>
+    <br>
+    <div class="background--purple"><strong class="font-white">(.background--purple)</strong></div>
+    <br>
+    <div class="background--mid-blue"><strong class="font-white">(.background--mid-blue)</strong></div>
+    <br>
+    <div class="background--grey"><strong class="font-white">(.background--grey)</strong></div>
+    <hr>
+    <h3 class="h3">Grids & Breakpoints</h3>
+    <div class="push--bottom cf text--center">
+      <div class="col-1 background--mid-grey">1</div>
+      <div class="col-1 background--mid-grey">1</div>
+      <div class="col-1 background--mid-grey">1</div>
+      <div class="col-1 background--mid-grey">1</div>
+      <div class="col-1 background--mid-grey">1</div>
+      <div class="col-1 background--mid-grey">1</div>
+      <div class="col-1 background--mid-grey">1</div>
+      <div class="col-1 background--mid-grey">1</div>
+      <div class="col-1 background--mid-grey">1</div>
+      <div class="col-1 background--mid-grey">1</div>
+      <div class="col-1 background--mid-grey">1</div>
+      <div class="col-1 background--mid-grey">1</div>
+    </div>
 
-  <div class="push--bottom cf text--center">
-    <div class="col-3 background--mid-grey">3</div>
-    <div class="col-9 background--mid-grey">9</div>
-  </div>
+    <div class="push--bottom cf text--center">
+      <div class="col-6 background--mid-grey">6</div>
+      <div class="col-6 background--mid-grey">6</div>
+    </div>
+
+    <div class="push--bottom cf text--center">
+      <div class="col-3 background--mid-grey">3</div>
+      <div class="col-9 background--mid-grey">9</div>
+    </div>
 
 
-  <hr>
-  <h4>Radio Button</h4>
-  <form>
-    <div class="form-group">
-      <fieldset class="inline">
+    <hr>
+    <h4>Radio Button</h4>
+    <form>
+      <div class="form-group">
+        <fieldset class="inline">
 
-        <legend class="visuallyhidden">Do you already have a personal user account?</legend>
+          <legend class="visuallyhidden">Do you already have a personal user account?</legend>
 
-        <label class="block-label" for="radio-inline-1">
-          <input id="radio-inline-1" type="radio" name="radio-inline-group" value="Yes">
-          Yes
+          <label class="block-label" for="radio-inline-1">
+            <input id="radio-inline-1" type="radio" name="radio-inline-group" value="Yes">
+            Yes
+          </label>
+          <label class="block-label" for="radio-inline-2">
+            <input id="radio-inline-2" type="radio" name="radio-inline-group" value="No">
+            No
+          </label>
+
+        </fieldset>
+      </div>
+    </form>
+    <hr>
+    <h4>Checkboxes</h4>
+    <form>
+      <fieldset>
+
+        <legend class="visuallyhidden">Which types of waste do you transport regularly?</legend>
+
+        <label class="block-label" for="waste-type-1">
+          <input id="waste-type-1" name="waste-types" type="checkbox" value="waste-animal">
+          Waste from animal carcasses
         </label>
-        <label class="block-label" for="radio-inline-2">
-          <input id="radio-inline-2" type="radio" name="radio-inline-group" value="No">
-          No
+        <label class="block-label" for="waste-type-2">
+          <input id="waste-type-2" name="waste-types" type="checkbox" value="waste-mines">
+          Waste from mines or quarries
+        </label>
+        <label class="block-label" for="waste-type-3">
+          <input id="waste-type-3" name="waste-types" type="checkbox" value="waste-farm-agricultural">
+          Farm or agricultural waste
         </label>
 
       </fieldset>
+    </form>
+    <hr>
+    <h4>Input fields</h4>
+    <div class="form-group">
+      <label class="form-label" for="first-name-2">First name</label>
+      <input class="form-control" id="first-name-2" name="first-name-2" type="text">
     </div>
-  </form>
-  <hr>
-  <h4>Checkboxes</h4>
-  <form>
-    <fieldset>
-
-      <legend class="visuallyhidden">Which types of waste do you transport regularly?</legend>
-
-      <label class="block-label" for="waste-type-1">
-        <input id="waste-type-1" name="waste-types" type="checkbox" value="waste-animal">
-        Waste from animal carcasses
-      </label>
-      <label class="block-label" for="waste-type-2">
-        <input id="waste-type-2" name="waste-types" type="checkbox" value="waste-mines">
-        Waste from mines or quarries
-      </label>
-      <label class="block-label" for="waste-type-3">
-        <input id="waste-type-3" name="waste-types" type="checkbox" value="waste-farm-agricultural">
-        Farm or agricultural waste
-      </label>
-
-    </fieldset>
-  </form>
-  <hr>
-  <h4>Input fields</h4>
-  <div class="form-group">
-    <label class="form-label" for="first-name-2">First name</label>
-    <input class="form-control" id="first-name-2" name="first-name-2" type="text">
-  </div>
-  <div class="form-group">
-    <label class="form-label" for="last-name-2">Last name</label>
-    <input class="form-control" id="last-name-2" name="last-name-2" type="text">
-  </div>
-  <hr>
-  <div class="form-group">
-    <label class="form-label" for="select-box">This is the label text</label>
-    <select class="form-control" id="select-box">
-      <option>GOV.UK elements option 1</option>
-      <option>GOV.UK elements option 2</option>
-      <option>GOV.UK elements option 3</option>
-    </select>
-  </div>
-  <hr>
+    <div class="form-group">
+      <label class="form-label" for="last-name-2">Last name</label>
+      <input class="form-control" id="last-name-2" name="last-name-2" type="text">
+    </div>
+    <hr>
+    <div class="form-group">
+      <label class="form-label" for="select-box">This is the label text</label>
+      <select class="form-control" id="select-box">
+        <option>GOV.UK elements option 1</option>
+        <option>GOV.UK elements option 2</option>
+        <option>GOV.UK elements option 3</option>
+      </select>
+    </div>
+    <hr>
+  </main>
 
 
 </body>
