--- a/public/index.html
+++ b/public/index.html
@@ -15,33 +15,33 @@
 <body>
   <header role="banner">
     <div class="navigation">
-      <div class="navigation-top background--dark-navy">
+      <div class="navigation-strip background--dark-navy soft-half--top">
         <div class="outer-container">
           <ul class="list-inline">
-            <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government.svg"></a></li>
+            <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
             <li class="float--left soft--left"><a class="" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of GREAT.gov.uk</a></li>
           </ul>
         </div>
       </div>
       <div class="background--great-blue">
         <div class="outer-container">
-          <a href="https://www.exportingisgreat.gov.uk" title="Go to the Exporting is great homepage">
-            <img src="/images/EiG-logo-withHMG.svg" alt="Exporting is great logo" class="soft-half--ends">
+          <a href="https://www.exportingisgreat.gov.uk" title="Go to the Exporting is great homepage" class="soft-half--ends float--left">
+            <img src="/images/EiG_logo_horizontal.svg" alt="Exporting is great logo">
           </a>
         </div>
       </div>
-      <div class="navigation-main background--blue">
+      <div class="navigation-main background--dark-blue">
         <div class="outer-container">
           <nav>
             <ul class="list-inline">
-              <li class="header-nav-link"><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="background--light-blue">New to exporting</a></li>
-              <li class="header-nav-link"><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="background--light-blue">Occasional Exporter</a></li>
-              <li class="header-nav-link"><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="background--light-blue">Regular exporter</a></li>
-              <li class="header-nav-link"><a class="font-reg" href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
-              <li class="header-nav-link"><a class="font-reg" href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
-              <li class="header-nav-link"><a class="font-reg" href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
-              <li class="header-nav-link"><a class="font-reg" href="" title="UK Export Finance">UK Export Finance</a></li>
-              <li class="header-nav-link"><a class="font-reg" href="https://events.trade.gov.uk/" title="Export Events">Export Events</a></li>
+              <li><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="background--light-blue">New to exporting</a></li>
+              <li><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="background--light-blue">Occasional Exporter</a></li>
+              <li><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="background--light-blue">Regular exporter</a></li>
+              <li><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities" class="navigation-main--link">Export opportunities</a></li>
+              <li><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer" class="navigation-main--link">Find a buyer</a></li>
+              <li><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="navigation-main--link navigation-main--link--active">Selling online overseas</a></li>
+              <li><a href="" title="UK Export Finance" class="navigation-main--link">UK Export Finance</a></li>
+              <li><a href="https://events.trade.gov.uk/" title="Export Events" class="navigation-main--link">Export Events</a></li>
             </ul>
           </nav>
         </div>
@@ -191,8 +191,59 @@
         <option>GOV.UK elements option 3</option>
       </select>
     </div>
-    <hr>
   </main>
+
+  <footer role="contentinfo">
+    <div class="footer background--great-blue soft--top">
+        <div class="outer-container soft--ends">
+          <div class="col-4">
+            <a href="https://www.exportingisgreat.gov.uk/" title="Go to the Exporting is Great homepage">
+              <img src="/images/EiG-logo-stacked.svg" alt="Exporting is Great logo" class="footer-logo">
+            </a>
+          </div>
+
+          <div class="col-2">
+            <ul class="footer-links">
+              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/new/" title="New to exporting">New to exporting</a></li>
+              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/occasional/" title="Occasional exporter">Occasional exporter</a></li>
+              <li><a href="https://www.exportingisgreat.gov.uk/regular/" title="Regular exporter">Regular exporter</a></li>
+            </ul>
+          </div>
+
+          <div class="col-3 footer-middle-section soft--left">
+            <ul class=" footer-links soft--left">
+              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
+              <li class="push-half--bottom"><a href="https://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
+              <li class="push-half--bottom"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
+              <li class="push-half--bottom"><a href="" title="UK Export Finance">UK Export Finance</a></li>
+              <li><a href="https://events.trade.gov.uk/" title="Exporting Events">Exporting Events</a></li>
+            </ul>
+          </div>
+
+          <div class="col-3 soft--left">
+            <ul class="footer-links soft--left">
+              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/about/" title="About">About</a></li>
+              <li class="push-half--bottom"><a href="https://contact-us.export.great.gov.uk/selling_online_overseas" title="Contact us">Contact us</a></li>
+              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/privacy-and-cookies/" title="Privacy and Cookies">Privacy &amp; cookies</a></li>
+              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/terms-and-conditions/" title="Terms and conditions">Terms &amp; conditions</a></li>
+              <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade" title="Department for International Trade">Department for International Trade</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="navigation outer-container soft--ends">
+          <hr class="push--top white">
+          <div class="navigation-strip col-6 soft-half--top">
+            <ul class="list-inline">
+              <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
+              <li class="float--left soft--left"><a class="" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of GREAT.gov.uk</a></li>
+            </ul>
+          </div>
+          <div class="col-6 text--right font-light-grey font-xsmall soft-half--top">
+            <p>&copy Crown copyright 2017. All rights reserved.</p>
+          </div>
+        </div>
+    </div>
+  </footer>
 
 
 </body>
