add footer toggle button

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <div class="navigation">
       <div class="navigation-strip background--dark-navy soft-half--top">
         <div class="outer-container">
-          <ul class="list-inline">
+          <ul class="list-inline list-separators">
             <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
             <li class="float--left soft--left"><a class="" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of GREAT.gov.uk</a></li>
           </ul>
@@ -31,19 +31,38 @@
         </div>
       </div>
       <div class="navigation-main background--dark-blue">
-        <div class="outer-container">
+        <div class="navigation-main-section outer-container">
           <nav>
-            <ul class="list-inline">
-              <li><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="background--light-blue">New to exporting</a></li>
-              <li><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="background--light-blue">Occasional Exporter</a></li>
-              <li><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="background--light-blue">Regular exporter</a></li>
-              <li><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities" class="navigation-main--link">Export opportunities</a></li>
-              <li><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer" class="navigation-main--link">Find a buyer</a></li>
-              <li><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="navigation-main--link navigation-main--link--active">Selling online overseas</a></li>
-              <li><a href="" title="UK Export Finance" class="navigation-main--link">UK Export Finance</a></li>
-              <li><a href="https://events.trade.gov.uk/" title="Export Events" class="navigation-main--link">Export Events</a></li>
+            <ul class="list-inline list-separators">
+              <li><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="navigation-main-link background--light-blue">New to exporting</a></li>
+              <li><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="navigation-main-link background--light-blue">Occasional Exporter</a></li>
+              <li><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="navigation-main-link background--light-blue">Regular exporter</a></li>
+              <li><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities" class="navigation-main-link navigation-main-link--services">Export opportunities</a></li>
+              <li><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer" class="navigation-main-link navigation-main-link--services">Find a buyer</a></li>
+              <li><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="navigation-main-link navigation-main-link--services  navigation-main-link--services--active">Selling online overseas</a></li>
+              <li><a href="" title="UK Export Finance" class="navigation-main-link navigation-main-link--services">UK Export Finance</a></li>
+              <li><a href="https://events.trade.gov.uk/" title="Export Events" class="navigation-main-link navigation-main-link--services">Export Events</a></li>
             </ul>
           </nav>
+          <button class="button navigation-main-button font-white" title=""><i class="icon icon-menu"></i>All</button>
+        </div>
+        <div class="navigation-toggle background--dark-navy">
+          <div class="outer-container soft">
+            <ul class="col-4 soft-half--left">
+              <li><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="push-half--bottom">New to exporting</a></li>
+              <li><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="push-half--bottom">Occasional Exporter</a></li>
+              <li><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="push-half--bottom">Regular exporter</a></li>
+            </ul>
+            <ul class="col-4 footer-middle-section soft--left">
+              <li class="soft--left"><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities" class="push-half--bottom">Export opportunities</a></li>
+              <li class="soft--left"><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer" class="push-half--bottom">Find a buyer</a></li>
+              <li class="soft--left"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="push-half--bottom">Selling online overseas</a></li>
+            </ul>
+            <ul class="col-4">
+              <li class="soft--left"><a href="" title="UK Export Finance" class="push-half--bottom">UK Export Finance</a></li>
+              <li class="soft--left"><a href="https://events.trade.gov.uk/" title="Export Events" class="push-half--bottom">Export Events</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -62,7 +81,10 @@
     <h4 class="h4">h4</h4>
     <p>This is a 18px headline <strong>(.h4)</strong></p>
     <hr>
-    <p>This is a 16px paragraph. Cupcake ipsum dolor sit caramel, licorice gummy bears with waffle chocolate cake</p>
+    <p><strong>This is a 16px paragraph.</strong></p>
+    <p>Cupcake ipsum dolor sit amet cotton candy toffee chocolate bar. Carrot cake icing brownie jelly-o toffee gingerbread. Dessert apple pie cake soufflé dessert cake oat cake.</p>
+
+    <p>Pastry pastry sweet dragée cupcake dessert donut. Bear claw soufflé sesame snaps cake bear claw gingerbread topping. Sesame snaps liquorice donut chocolate jujubes tootsie roll wafer biscuit. Muffin bonbon oat cake topping fruitcake macaroon.</p>
     <hr>
     <a href="www.thisisalink.com" class="link">This is a link</a> <strong>(.link)</strong>
     <hr>
@@ -233,7 +255,7 @@
         <div class="navigation outer-container soft--ends">
           <hr class="push--top white">
           <div class="navigation-strip col-6 soft-half--top">
-            <ul class="list-inline">
+            <ul class="list-inline list-separators">
               <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
               <li class="float--left soft--left"><a class="" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of GREAT.gov.uk</a></li>
             </ul>
@@ -244,6 +266,8 @@
         </div>
     </div>
   </footer>
+  <script src="js/jquery.js"></script>
+  <script src="js/navigation.js"></script>
 
 
 </body>
