updates text and navigation fixes

--- a/public/index.html
+++ b/public/index.html
@@ -69,17 +69,17 @@
   </header>
 
   <main class="outer-container">
-    <h1 class="h1">h1</h1>
-    <p>This is a 48px headline<strong>(.h1)</strong></p>
+    <h1 class="h1">This is a 48px heading</h1>
+    <p>class<strong> (.h1)</strong></p>
     <hr>
-    <h2 class="h2">h2</h2>
-    <p>This is a 32px headline <strong>(.h2)</strong></p>
+    <h2 class="h2">This is a 32px heading</h2>
+    <p>class <strong>(.h2)</strong></p>
     <hr>
-    <h3 class="h3">h3</h3>
-    <p>This is a 24px headline <strong>(.h3)</strong></p>
+    <h3 class="h3">This is a 24px heading</h3>
+    <p>class <strong>(.h3)</strong></p>
     <hr>
-    <h4 class="h4">h4</h4>
-    <p>This is a 18px headline <strong>(.h4)</strong></p>
+    <h4 class="h4">This is a 18px heading</h4>
+    <p>class <strong>(.h4)</strong></p>
     <hr>
     <p><strong>This is a 16px paragraph.</strong></p>
     <p>Cupcake ipsum dolor sit amet cotton candy toffee chocolate bar. Carrot cake icing brownie jelly-o toffee gingerbread. Dessert apple pie cake soufflé dessert cake oat cake.</p>
