--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       <div class="navigation-main background--dark-blue">
         <div class="navigation-main-section outer-container">
           <nav>
-            <ul class="list-inline list-separators">
+            <ul class="list-inline list-separators navigation-main-menu">
               <li><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="navigation-main-link background--light-blue">New to exporting</a></li>
               <li><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="navigation-main-link background--light-blue">Occasional Exporter</a></li>
               <li><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="navigation-main-link background--light-blue">Regular exporter</a></li>
