bug fix, navigation and typography

--- a/public/index.html
+++ b/public/index.html
@@ -15,17 +15,17 @@
 <body>
   <header role="banner">
     <div class="navigation">
-      <div class="navigation-strip background--dark-navy soft-half--top">
+      <div class="navigation-strip background--dark-navy">
         <div class="outer-container">
           <ul class="list-inline list-separators">
             <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
-            <li class="float--left soft--left"><a class="" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of GREAT.gov.uk</a></li>
+            <li class="float--left soft--left"><a class="" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>GREAT.gov.uk</strong></a></li>
           </ul>
         </div>
       </div>
       <div class="background--great-blue">
         <div class="outer-container">
-          <a href="https://www.exportingisgreat.gov.uk" title="Go to the Exporting is great homepage" class="soft-half--ends float--left">
+          <a href="https://www.exportingisgreat.gov.uk" title="Go to the Exporting is great homepage" class="float--left navigation-logo">
             <img src="/images/EiG_logo_horizontal.svg" alt="Exporting is great logo">
           </a>
         </div>
@@ -34,14 +34,14 @@
         <div class="navigation-main-section outer-container">
           <nav>
             <ul class="list-inline list-separators navigation-main-menu">
-              <li><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="navigation-main-link background--light-blue">New to exporting</a></li>
-              <li><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="navigation-main-link background--light-blue">Occasional Exporter</a></li>
-              <li><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="navigation-main-link background--light-blue">Regular exporter</a></li>
+              <li><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="navigation-main-link background--light-blue font-medium">New to exporting</a></li>
+              <li><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="navigation-main-link background--light-blue font-medium">Occasional exporter</a></li>
+              <li><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="navigation-main-link background--light-blue font-medium">Regular exporter</a></li>
               <li><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities" class="navigation-main-link navigation-main-link--services">Export opportunities</a></li>
               <li><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer" class="navigation-main-link navigation-main-link--services">Find a buyer</a></li>
               <li><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="navigation-main-link navigation-main-link--services  navigation-main-link--services--active">Selling online overseas</a></li>
               <li><a href="" title="UK Export Finance" class="navigation-main-link navigation-main-link--services">UK Export Finance</a></li>
-              <li><a href="https://events.trade.gov.uk/" title="Export Events" class="navigation-main-link navigation-main-link--services">Export Events</a></li>
+              <li><a href="https://events.trade.gov.uk/" title="Export Events" class="navigation-main-link navigation-main-link--services">Export events</a></li>
             </ul>
           </nav>
           <button class="button navigation-main-button font-white" title=""><i class="icon icon-menu"></i>All</button>
@@ -50,7 +50,7 @@
           <div class="outer-container soft">
             <ul class="col-4 soft-half--left">
               <li><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="push-half--bottom">New to exporting</a></li>
-              <li><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="push-half--bottom">Occasional Exporter</a></li>
+              <li><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="push-half--bottom">Occasional exporter</a></li>
               <li><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="push-half--bottom">Regular exporter</a></li>
             </ul>
             <ul class="col-4 footer-middle-section soft--left">
@@ -60,7 +60,7 @@
             </ul>
             <ul class="col-4">
               <li class="soft--left"><a href="" title="UK Export Finance" class="push-half--bottom">UK Export Finance</a></li>
-              <li class="soft--left"><a href="https://events.trade.gov.uk/" title="Export Events" class="push-half--bottom">Export Events</a></li>
+              <li class="soft--left"><a href="https://events.trade.gov.uk/" title="Export Events" class="push-half--bottom">Export events</a></li>
             </ul>
           </div>
         </div>
@@ -85,7 +85,19 @@
     <p>Cupcake ipsum dolor sit amet cotton candy toffee chocolate bar. Carrot cake icing brownie jelly-o toffee gingerbread. Dessert apple pie cake soufflé dessert cake oat cake.</p>
 
     <p>Pastry pastry sweet dragée cupcake dessert donut. Bear claw soufflé sesame snaps cake bear claw gingerbread topping. Sesame snaps liquorice donut chocolate jujubes tootsie roll wafer biscuit. Muffin bonbon oat cake topping fruitcake macaroon.</p>
+
     <hr>
+    <p><strong>This is a bold 16px paragraph.</strong></p>
+    <p><strong>Pastry pastry sweet dragée cupcake dessert donut. Bear claw soufflé sesame snaps cake bear claw gingerbread topping. Sesame snaps liquorice donut chocolate jujubes tootsie roll wafer biscuit. Muffin bonbon oat cake topping fruitcake macaroon.</strong></p>
+    <hr>
+
+    <p><strong>This is a 18px paragraph.</strong></p>
+    <p class="font-large">Cupcake ipsum dolor sit amet cotton candy toffee chocolate bar. Carrot cake icing brownie jelly-o toffee gingerbread. Dessert apple pie cake soufflé dessert cake oat cake.</p>
+
+    <p class="font-large">Pastry pastry sweet dragée cupcake dessert donut. Bear claw soufflé sesame snaps cake bear claw gingerbread topping. Sesame snaps liquorice donut chocolate jujubes tootsie roll wafer biscuit. Muffin bonbon oat cake topping fruitcake macaroon.</p>
+    <p>class <strong>(.font-large)</strong></p>
+    <hr>
+
     <a href="www.thisisalink.com" class="link">This is a link</a> <strong>(.link)</strong>
     <hr>
     <h3 class="h3">List</h3>
@@ -99,11 +111,24 @@
     <hr>
     <h3 class="h3">Buttons</h3>
     <button class="button button-blue">Button</button>
+    <button class="button button-red">Button</button>
     <button class="button button-border">Button</button>
     <h4 class="h4">Button large</h4>
     <button class="button button-blue button-large">Button</button>
     <hr>
     <h3 class="h3">Backgrounds</h3>
+    <br>
+    <div class="background--aqua"><strong class="font-white">(.background--aqua)</strong></div>
+    <br>
+    <div class="background--dark-navy"><strong class="font-white">(.background--dark-navy)</strong></div>
+    <br>
+    <div class="background--dark-blue"><strong class="font-white">(.background--dark-blue)</strong></div>
+    <br>
+    <div class="background--light-blue"><strong class="font-white">(.background--light-blue)</strong></div>
+    <br>
+    <div class="background--light-aqua"><strong class="font-white">(.background--light-aqua)</strong></div>
+    <br>
+    <div class="background--great-red"><strong class="font-white">(.background--great-red)</strong></div>
     <br>
     <div class="background--great-blue"><strong class="font-white">(.background--great-blue)</strong></div>
     <br>
@@ -122,8 +147,6 @@
     <div class="background--purple"><strong class="font-white">(.background--purple)</strong></div>
     <br>
     <div class="background--mid-blue"><strong class="font-white">(.background--mid-blue)</strong></div>
-    <br>
-    <div class="background--grey"><strong class="font-white">(.background--grey)</strong></div>
     <hr>
     <h3 class="h3">Grids & Breakpoints</h3>
     <div class="push--bottom cf text--center">
@@ -234,11 +257,11 @@
 
           <div class="col-3 footer-middle-section soft--left">
             <ul class=" footer-links soft--left">
-              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
-              <li class="push-half--bottom"><a href="https://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
-              <li class="push-half--bottom"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
-              <li class="push-half--bottom"><a href="" title="UK Export Finance">UK Export Finance</a></li>
-              <li><a href="https://events.trade.gov.uk/" title="Exporting Events">Exporting Events</a></li>
+              <li class="push-half--bottom soft--left"><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
+              <li class="push-half--bottom soft--left"><a href="https://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
+              <li class="push-half--bottom soft--left"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
+              <li class="push-half--bottom soft--left"><a href="" title="UK Export Finance">UK Export Finance</a></li>
+              <li class="soft--left"><a href="https://events.trade.gov.uk/" title="Exporting Events">Exporting Events</a></li>
             </ul>
           </div>
 
